--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
     <section class="home">
         <div class="informacoes">
             <h1>Olá! Sou Jeison Bainha de Oliveira</h1>
-            <p>Sou um advogado brasileiro que se mudou para Portugal e, agora, quer mudar de área.</p>
-            <p>Tenho muito interesse programar e atualmente estou estudando HTML, CSS e Java Script.</p>
-            <p>Meu interesse surgiu quando criei meu próprio site com o WordPress e, agora, quero começar outros sites
-                do zero com as linguagens de programação que estou aprendendo.</p>
+            <p>Sou um advogado luso-brasileiro em transição de carreira.</p>
+            <p>Tenho muito interesse programar e já me aventurei (superficialmente) em cursos on-line de HTML, CSS, Java Script e Python.</p>
+            <p>Atualmente estou a cursar Java presencialmente no ISCTE pelo programa UPskill (parceria com o IEFP).</p>
+            <p>Meu interesse em programação surgiu quando vim morar em Portugal e criei meu próprio site com o WordPress para empreender na advocacia.</p>
+            <p>Minha intenção é ganhar experiência em linguagens de programação para desenvolver tanto softwares 
+                quanto sites mais complexos que possam facilitar a vida das pessoas.</p>
             <p>Você pode me encontrar nos links abaixo!</p>
             <ul class="redes-sociais">
                 <li>
