--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
                     <img src="./src/imagens/SiteJBOliveira.jpg" alt="Site Pessoal">
                     <h3>www.JBOliveira.com</h3>
                     <div class="informacoes-projeto">
-                        <p>Site feito com o WordPress. O objetivo é fazer uma versão dele em HTML, CSS e Java Script!
-                        </p>
+                        <p>Site profisisonal feito com o WordPress (atualmente fora do ar)</p>
                     </div>
                 </a>
             </div>
