--- a/index.html
+++ b/index.html
@@ -38,17 +38,15 @@
 
     <section class="home">
         <div class="informacoes">
-            <h1>Olá! Sou Jeison Bainha de Oliveira</h1>
-            <p>Sou um advogado luso-brasileiro em transição de carreira.</p>
-            <p>Tenho muito interesse programar e já me aventurei (superficialmente) em cursos on-line de HTML, CSS, Java Script e Python.</p>
-            <p>Atualmente estou a cursar Java presencialmente no ISCTE pelo programa UPskill (parceria com o IEFP).</p>
-            <p>Meu interesse em programação surgiu quando vim morar em Portugal e criei meu próprio site com o WordPress para empreender na advocacia.</p>
-            <p>Minha intenção é ganhar experiência em linguagens de programação para desenvolver tanto softwares 
-                quanto sites mais complexos que possam facilitar a vida das pessoas.</p>
-            <p>Você pode me encontrar nos links abaixo!</p>
+            <h1>Sou Jeison Bainha de Oliveira</h1>
+            <p>Java Developer, Digital Architect e Advogado luso-brasileiro residente em Portugal.</p>
+            <p>Cursei Programação em Linguagem Java presencialmente no ISCTE e, atualmente, trabalho com consultoria na área de TI.</p>
+            <p>Na NTTData, uma das 10 melhores empresas de consultoria de TI do mundo, contribuo na arquitetura de soluções digitais em nuvem.</p>
+            <p>Possuo certificação para trabalhar com os serviços de nuvem da Microsoft (Azure) e Google (Google Cloud) e, recentemente, meu foco passou ao desenvolvimento de APIs com base em Java (Mulesoft).</p>
+            <p>Podes me encontrar nos links abaixo!</p>
             <ul class="redes-sociais">
                 <li>
-                    <a href="https://www.linkedin.com/in/jboliveira-oficial/" title="Ir para o LikedIn" target="_blank">
+                    <a href="https://www.linkedin.com/in/jboliveira-pt/" title="Ir para o LikedIn" target="_blank">
                         <i class="fab fa-linkedin-in">
                         </i>
                     </a>
