--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="container-foto">
             <div class="foto sombra-interna">
-                <img src="./src/imagens/nttdata.photo.nobackgroud.png" alt="foto do portfólio do Jeison">
+                <img src="./src/imagens/foto.nttdata.png" alt="foto do portfólio do Jeison">
             </div>
         </div>
     </section>
