--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
 
     <section class="home">
         <div class="informacoes">
-            <h1>Sou Jeison Bainha de Oliveira</h1>
-            <p>Java Developer, Digital Architect e Advogado luso-brasileiro residente em Portugal.</p>
-            <p>Cursei Programação em Linguagem Java presencialmente no ISCTE e, atualmente, trabalho com consultoria na área de TI.</p>
-            <p>Na NTTData, uma das 10 melhores empresas de consultoria de TI do mundo, contribuo na arquitetura de soluções digitais em nuvem.</p>
-            <p>Possuo certificação para trabalhar com os serviços de nuvem da Microsoft (Azure) e Google (Google Cloud) e, recentemente, meu foco passou ao desenvolvimento de APIs com base em Java (Mulesoft).</p>
-            <p>Podes me encontrar nos links abaixo!</p>
+            <h1>Jeison Bainha de Oliveira</h1>
+            <p><strong>Java Developer | Digital Architect</strong></p>
+            <p>Luso-brasileiro consultor na área de TI residente em Portugal.</p> 
+            <p>Programação em Linguagem Java - formação profissional presencial no ISCTE.</p> 
+            <p>Último trabalho: NTTData, uma das 10 melhores empresas de consultoria de TI do mundo, auxílio no desenvolvimento de APIs baseados em Java para ambientes em nuvem (Mulesoft).</p>
+            <p>Certificação para trabalhar com os serviços de nuvem da Microsoft (Azure) e Google (Google Cloud).</p>
+            <p>Mais informações em:</p>
             <ul class="redes-sociais">
                 <li>
                     <a href="https://www.linkedin.com/in/jboliveira-pt/" title="Ir para o LikedIn" target="_blank">
@@ -58,13 +59,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/jboliveira_oficial/" title="Ir para o Instagram">
+                    <a href="https://www.instagram.com/jboliveira.pt/" title="Ir para o Instagram">
                         <i class="fab fa-instagram">
                         </i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/JBOliveiraa" title="Ir para o GitHub">
+                    <a href="https://github.com/JBOliveira-pt" title="Ir para o GitHub">
                         <i class="fab fa-github">
                         </i>
                     </a>
