--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <h1>Jeison Bainha de Oliveira</h1>
             <p><strong>Java Developer | Digital Architect</strong></p>
             <p>Luso-brasileiro consultor na área de TI residente em Portugal.</p> 
-            <p>Programação em Linguagem Java - formação profissional presencial no ISCTE.</p> 
-            <p>Último trabalho: NTTData, uma das 10 melhores empresas de consultoria de TI do mundo, auxílio no desenvolvimento de APIs baseados em Java para ambientes em nuvem (Mulesoft).</p>
-            <p>Certificação para trabalhar com os serviços de nuvem da Microsoft (Azure) e Google (Google Cloud).</p>
+            <p>Programação em Linguagem Java - formação profissional presencial no <strong>ISCTE</strong>.</p> 
+            <p>Último trabalho: NTTData, uma das 10 melhores empresas de consultoria de TI do mundo, auxílio no desenvolvimento de APIs baseados em Java para ambientes em nuvem (<strong>Mulesoft</strong>).</p>
+            <p>Certificação para trabalhar com os serviços de nuvem da Microsoft (<strong>Azure</strong>) e Google (<strong>Google Cloud</strong>).</p>
             <p>Mais informações em:</p>
             <ul class="redes-sociais">
                 <li>
