--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p><strong>Java Developer | Digital Architect</strong></p>
             <p>Luso-brasileiro consultor na área de TI residente em Portugal.</p> 
             <p>Programação em Linguagem Java - formação profissional presencial no <strong>ISCTE</strong>.</p> 
-            <p>Último trabalho: NTTData, uma das 10 melhores empresas de consultoria de TI do mundo, auxílio no desenvolvimento de APIs baseados em Java para ambientes em nuvem (<strong>Mulesoft</strong>).</p>
+            <p>Último trabalho: <strong>NTTData</strong>, uma das 10 melhores empresas de consultoria de TI do mundo, auxílio no desenvolvimento de APIs baseados em Java para ambientes em nuvem (<strong>Mulesoft</strong>).</p>
             <p>Certificação para trabalhar com os serviços de nuvem da Microsoft (<strong>Azure</strong>) e Google (<strong>Google Cloud</strong>).</p>
             <p>Mais informações em:</p>
             <ul class="redes-sociais">
