--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         <div class="container-projetos">
             <div class="projeto ativo">
                 <a href="https://www.jboliveira.com/" target="_blank">
-                    <img src="./src/imagens/SiteJBOliveira.jpg" alt="Site Pessoal">
-                    <h3>www.JBOliveira.com</h3>
+                    <img src="./src/imagens/S.Inc_demo_Screen.png" alt="S.Inc MVP">
+                    <h3>https://jboliveira-pt.github.io/sinc/</h3>
                     <div class="informacoes-projeto">
-                        <p>Site profisisonal feito com o WordPress (atualmente fora do ar)</p>
+                        <p>MVP do S.Inc, software criado em Java</p>
                     </div>
                 </a>
             </div>
