--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2 class="titulo">Meus Projetos</h2>
         <div class="container-projetos">
             <div class="projeto ativo">
-                <a href="https://www.jboliveira.com/" target="_blank">
+                <a href="https://jboliveira-pt.github.io/sinc/" target="_blank">
                     <img src="./src/imagens/S.Inc_demo_Screen.png" alt="S.Inc MVP">
                     <h3>https://jboliveira-pt.github.io/sinc/</h3>
                     <div class="informacoes-projeto">
