--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/estilo.css">
     <link rel="stylesheet" href="./src/css/responsivo.css">
 </head>
 
@@ -30,7 +30,7 @@
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="#projetos">Meus Projetos</a>
+                    <a href="#projetos">My Projetcs</a>
                 </li>
             </ul>
         </nav>
@@ -40,11 +40,12 @@
         <div class="informacoes">
             <h1>Jeison Bainha de Oliveira</h1>
             <p><strong>Java Developer | Digital Architect</strong></p>
-            <p>Luso-brasileiro consultor na área de TI residente em Portugal.</p> 
-            <p>Programação em Linguagem Java - formação profissional presencial no <strong>ISCTE</strong>.</p> 
-            <p>Último trabalho: <strong>NTTData</strong>, uma das 10 melhores empresas de consultoria de TI do mundo, auxílio no desenvolvimento de APIs baseados em Java para ambientes em nuvem (<strong>Mulesoft</strong>).</p>
-            <p>Certificação para trabalhar com os serviços de nuvem da Microsoft (<strong>Azure</strong>) e Google (<strong>Google Cloud</strong>).</p>
-            <p>Mais informações em:</p>
+            <p>Portuguese-Brazilian IT consultant based in Portugal</p> 
+            <p>After nearly a decade as a lawyer leading the regulatory area of the oil & gas sector, I decided to transition into IT. My background in exact sciences, gained from my time in the Brazilian Navy, Mechanical Engineering studies, and years teaching private lessons in physics and calculus, laid the foundation for my organized and objective problem-solving approach.</p> 
+            <p>I deepened my technical expertise through specialized training at the University Institute of Lisbon - <strong>ISCTE</strong>, obtaining a <strong>Java programming certification</strong>. Here, I developed a Personal Finance Management System using <strong>IntelliJ</strong>, showcasing my proficiency in Java and Object-Oriented Programming (<strong>OOP</strong>). My practical lab work also included creating a robust Information System with <strong>MySQL</strong>, and authoring a Technical Report with a <strong>Spring Boot</strong> application, coordinated through <strong>Jira</strong> and designed using <strong>Figma</strong>. These projects allowed me to integrate <strong>HTML</strong>, <strong>CSS</strong>, and <strong>UX/UI</strong> principles into real-world solutions.</p>
+            <p>My most recent experience involves supporting data migration projects using the Anypoint Platform (<strong>MuleSoft</strong>) and collaborating within <strong>Agile</strong> teams, with tasks organized on <strong>Azure DevOps</strong>. I have also earned certifications from Microsoft (<strong>Azure Fundamentals</strong>) and Google (<strong>Cloud Digital Leader</strong>), reinforcing my commitment to staying at the forefront of cloud technologies.</p>
+            
+            <p>Feel free to reach out and get in touch:</p>
             <ul class="redes-sociais">
                 <li>
                     <a href="https://www.linkedin.com/in/jboliveira-pt/" title="Ir para o LikedIn" target="_blank">
@@ -80,19 +81,19 @@
     </section>
 
     <section class="projetos" id="projetos">
-        <h2 class="titulo">Meus Projetos</h2>
+        <h2 class="titulo">Projetcs</h2>
         <div class="container-projetos">
             <div class="projeto ativo">
                 <a href="https://jboliveira-pt.github.io/sinc/" target="_blank">
                     <img src="./src/imagens/S.Inc-Demo_Screen.png" alt="S.Inc MVP">
                     <h3>https://jboliveira-pt.github.io/sinc/</h3>
                     <div class="informacoes-projeto">
-                        <p>MVP do S.Inc, software criado em Java</p>
+                        <p>S.Inc's MVP, Java-based software</p>
                     </div>
                 </a>
             </div>
         </div>
-        <button class="btn-mostrar-projetos">Mostrar mais</button>
+        <button class="btn-mostrar-projetos">Show more</button>
     </section>
 
     <script src="./src/js/index.js"></script>
