--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@
                     </div>
                 </a>
             </div>
+            <div class="projeto ativo">
+                <a href="https://jboliveira-pt.github.io/psialinelima/" target="_blank">
+                    <img src="./src/imagens/PsiAlineLima_Screen.png" alt="S.Inc MVP">
+                    <h3>https://jboliveira-pt.github.io/psialinelima/</h3>
+                    <div class="informacoes-projeto">
+                        <p>Psi Aline Lima Instagram Repository</p>
+                    </div>
+                </a>
+            </div>
         </div>
         <button class="btn-mostrar-projetos">Show more</button>
     </section>
@@ -216,3 +225,4 @@
 </body>
 
 </html>
+
