--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <img src="./src/imagens/PsiAlineLima_Screen.png" alt="S.Inc MVP">
                     <h3>https://jboliveira-pt.github.io/psialinelima/</h3>
                     <div class="informacoes-projeto">
-                        <p>Psi Aline Lima Instagram Repository</p>
+                        <p>Psi Aline Lima's Instagram Repository</p>
                     </div>
                 </a>
             </div>
@@ -225,4 +225,5 @@
 </body>
 
 </html>
+
 
