Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -199,16 +199,34 @@
                     <img src="./src/imagens/S.Inc-Demo_Screen.png" alt="S.Inc MVP">
                     <h3>https://jboliveira-pt.github.io/sinc/</h3>
                     <div class="informacoes-projeto">
-                        <p>S.Inc's MVP, Java-based software</p>
+                        <p>S.Inc's MVP</p>
                     </div>
                 </a>
             </div>
             <div class="projeto ativo">
                 <a href="https://jboliveira-pt.github.io/psialinelima/" target="_blank">
-                    <img src="./src/imagens/PsiAlineLima_Screen.png" alt="S.Inc MVP">
+                    <img src="./src/imagens/PsiAlineLima_Screen.png" alt="Psi Aline Lima">
                     <h3>https://jboliveira-pt.github.io/psialinelima/</h3>
                     <div class="informacoes-projeto">
-                        <p>Psi Aline Lima's Instagram Repository</p>
+                        <p>Psi Aline Lima's Repository</p>
+                    </div>
+                </a>
+            </div>
+            <div class="projeto ativo">
+                <a href="https://jboliveira-pt.github.io/javascriptgames/" target="_blank">
+                    <img src="./src/imagens/JavaScriptGames_Screen.png" alt="JavaScript Games">
+                    <h3>https://jboliveira-pt.github.io/javascriptgames/</h3>
+                    <div class="informacoes-projeto">
+                        <p>JavaScript Games</p>
+                    </div>
+                </a>
+            </div>
+            <div class="projeto ativo">
+                <a href="https://primeflow-landing.vercel.app/" target="_blank">
+                    <img src="./src/imagens/PrimeFLOW_Screen.png" alt="PrimeFLOW">
+                    <h3>https://primeflow-landing.vercel.app/</h3>
+                    <div class="informacoes-projeto">
+                        <p>PrimeFLOW</p>
                     </div>
                 </a>
             </div>
@@ -225,5 +243,6 @@
 </body>
 
 </html>
+
 
 
